# MARS_ROVER

./: .gitignore  README.md  pyproject.toml  requirements.txt
algorithms/: __init__.py  policy_iteration.py  q_learning.py  value_iteration.py
docs/: getting_started.md
environments/: __init__.py
environments/mars_rover/: __init__.py  mars_rover_env.py
exercises/week1/: README.md
notebooks/: 01_introduction.ipynb  02_mars_rover.ipynb
