[project]
name = "mars-rover-rl"
version = "2026.1.0"
description = "Mars Rover environment and algorithms for the Introduction to Reinforcement Learning course at Paris Lodron University Salzburg."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Simon Hirlaender", email = "simon.hirlaender@plus.ac.at"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "seaborn>=0.12",
    "plotly>=5.14",
    "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["environments*", "algorithms*"]

[tool.ruff]
target-version = "py310"
line-length = 100
